z-index bugfix/hack when dragging from history to itinerary

--- a/countries-fe/src/components/itinerary/itinerary.scss
+++ b/countries-fe/src/components/itinerary/itinerary.scss
@@ -1,7 +1,7 @@
 @import '../../global_styles/';
 
 .itinerary-container {
-    z-index: 1;
+    z-index: 3;
     // margin-top: 25vh;
     min-width: 35rem;
     min-height: fit-content;
